[project]
name = "class-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "google-generativeai>=0.8.3",
    "langchain-google-genai>=2.0.7",
    "langchain>=0.3.12",
    "uvicorn>=0.33.0",
    "ipython>=8.30.0",
    "langgraph>=0.2.59",
    "python-dotenv>=1.0.1",
]
